--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,8 @@
 @import url(./blocks/popup/__input/_edit-form/popup__input_edit-form_job.css);
 @import url(./blocks/popup/_active/popup_active.css);
 @import url(./blocks/popup/__content/popup__content.css);
+@import url(./blocks/popup/__content/__image/popup__content__image.css);
+@import url(./blocks/popup/__content/_user/popup__content_user_profile.css);
 @import url(./blocks/popup/__title/popup__title.css);
 @import url(./blocks/popup/__btn/popup__btn.css);
 @import url(./blocks/popup/__btn/_disabled/popup__btn_disabled.css);
@@ -47,3 +49,8 @@
 @import url(./blocks/popup/__content-img/popup__content-img.css);
 @import url(./blocks/popup/__img/popup__img.css);
 @import url(./blocks/popup/__img-sign/popup__img-sign.css);
+@import url(./blocks/profile-form/profile-form.css);
+@import url(./blocks/profile-form/__title/profile-form__title.css);
+@import url(./blocks/profile-form/__input/profile-form__input.css);
+@import url(./blocks/profile-form/__btn/profile-form__btn.css);
+@import url(./blocks/profile-form/__submit-subtitle/profile-form__submit-subtitle.css);
