--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,6 +4,9 @@
   border-bottom: 1px solid rgba(84, 84, 84, .7);
   margin: 0 auto;
   padding-top: 45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 @media (max-width: 599px) {
