--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/header/__links/header__links.css);
 @import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__links/_hover-off/header__links_text.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__user-set/profile__user-set.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
