--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -12,5 +12,7 @@
 @media (max-width: 599px) {
   .header {
     padding-top: 28px;
+    /* flex-direction: column;
+    flex-flow: column-reverse; */
   }
 }
