--- a/src/blocks/profile-form/profile-form.css
+++ b/src/blocks/profile-form/profile-form.css
@@ -5,3 +5,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media (max-width: 599px) {
+  .profile-form {
+    max-width: 260px;
+  }
+}
