--- a/src/blocks/elements/__like/elements__like.css
+++ b/src/blocks/elements/__like/elements__like.css
@@ -6,10 +6,10 @@
   background-repeat: no-repeat;
   background-size: contain;
   border: none;
-  transition: opacity .3s ease-in-out;
+  transition: opacity .5s ease-in-out;
 }
 
 .element__like:hover {
-  opacity: 0.5;
+  opacity: .6;
   cursor: pointer;
 }
