--- a/src/blocks/header/__btn/_open/header__btn_open.css
+++ b/src/blocks/header/__btn/_open/header__btn_open.css
@@ -3,5 +3,8 @@
     display: flex;
     flex-direction: column;
     gap: 9px;
+    padding: 0;
+    background: transparent;
+    border: 0;
   }
 }
