--- a/src/blocks/header/__links/header__links.css
+++ b/src/blocks/header/__links/header__links.css
@@ -1,12 +1,17 @@
 .header__links {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   gap: 24px;
 }
 
 @media (max-width: 599px) {
   .header__links {
-    margin-right: 30px;
+    flex-direction: column;
+    width: 100%;
+    gap: 18px;
+    padding-bottom: 40px;
+    margin-bottom: 27px;
+    border-bottom: 1px solid rgba(84, 84, 84, .7);
   }
 }
