--- a/src/blocks/header/__btn/__element/header__btn__element.css
+++ b/src/blocks/header/__btn/__element/header__btn__element.css
@@ -2,4 +2,5 @@
   width: 24px;
   height: 0px;
   border-top: 3px solid rgba(255, 255, 255, 1);
+  /* box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff */
 }
