--- a/src/blocks/header/__btn/__element/header__btn__element.css
+++ b/src/blocks/header/__btn/__element/header__btn__element.css
@@ -2,5 +2,24 @@
   width: 24px;
   height: 0px;
   border-top: 3px solid rgba(255, 255, 255, 1);
-  /* box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff */
+}
+
+.header__btn__element::before {
+  content: "";
+  position: absolute;
+  top: -9px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-top: 3px solid rgba(255, 255, 255, 1);
+}
+
+.header__btn__element::after {
+  content: "";
+  position: absolute;
+  top: 9px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-top: 3px solid rgba(255, 255, 255, 1);
 }
