--- a/src/blocks/header/__btn/_open/header__btn_open.css
+++ b/src/blocks/header/__btn/_open/header__btn_open.css
@@ -1,10 +1,7 @@
 @media (max-width: 599px) {
   .header__btn_open {
-    display: flex;
-    flex-direction: column;
-    gap: 9px;
+    display: block;
     padding: 0;
-    background: transparent;
     border: 0;
   }
 }
