--- a/src/blocks/header/__links/_mobile/header__links_mobile.css
+++ b/src/blocks/header/__links/_mobile/header__links_mobile.css
@@ -6,5 +6,6 @@
     padding-bottom: 40px;
     margin-bottom: 27px;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
+    margin-right: 0;
   }
 }
