fix/header_menu_icon

--- a/src/blocks/header/__btn/header__btn.css
+++ b/src/blocks/header/__btn/header__btn.css
@@ -1,6 +1,10 @@
 .header__btn {
   display: none;
-  position: relative;
+  /* position: relative; */
+  /* width: 100%;
+  max-width: 24px; */
+  min-height: 24px;
+  background: transparent;
 }
 
 @media (max-width: 599px) {
