--- a/src/blocks/header/__btn/__element/header__btn__element.css
+++ b/src/blocks/header/__btn/__element/header__btn__element.css
@@ -1,25 +1,27 @@
 .header__btn__element {
   width: 24px;
-  height: 0px;
-  border-top: 3px solid rgba(255, 255, 255, 1);
+  height: 3px;
+  position: relative;
+  align-self: center;
+  background-color: rgba(255, 255, 255, 1);
 }
 
-.header__btn__element::before {
+.header__btn__element:before {
   content: "";
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: -9px;
   left: 0;
-  width: 100%;
-  height: 100%;
-  border-top: 3px solid rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 1);
 }
 
-.header__btn__element::after {
+.header__btn__element:after {
   content: "";
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 9px;
   left: 0;
-  width: 100%;
-  height: 100%;
-  border-top: 3px solid rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 1);
 }
